.golden/6874382203897971272/golden

INITIALPATH:7:20: error:
    • INITIALPATH:7:33:
  |
7 | main = putStrLn [f|hello { world|]
  |                                 ^
unexpected end of input
expecting ':' or '}'

    • In the quasi-quotation: [f|hello { world|]
  |
7 | main = putStrLn [f|hello { world|]
  |                    ^^^^^^^^^^^^^^^
